# mac-beat-sync

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: release.yml
mac_beat_sync/: cli.py  main.py
mac_beat_sync/utils/: audio.py  keyboard.py  utils.py
